--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.782.0",
+    "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@clerk/nextjs": "^6.13.0",
     "@libsql/client": "^0.15.2",
     "@neondatabase/serverless": "^1.0.0",
@@ -27,6 +29,7 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slider": "^1.2.3",
@@ -43,8 +46,10 @@
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
+    "uuid": "^11.1.0",
     "ws": "^8.18.1",
     "zod": "^3.24.2"
   },
@@ -55,7 +60,7 @@
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
     "@types/ws": "^8.18.1",
-    "drizzle-kit": "^0.19.1",
+    "drizzle-kit": "^0.30.6",
     "eslint": "^9.24.0",
     "eslint-config-next": "^15.2.4",
     "eslint-plugin-drizzle": "^0.2.3",
